--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: IE48A
-description: Description of the webpage. You can change from config.yml file.
+description: IE48A
