--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: IE48A
-description: IE48A
+title: IE48A-Sp. Topics in Essentials of Data Analysis
+description: Süheyla Şeker
