--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-time-machine
 title: IE48A-Sp. Topics in Essentials of Data Analysis
 description: Süheyla Şeker
